--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Twinstagram</title>
+    <title>Petfolio</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/imgs/favicon-32x32.png"
+      href="/imgs/icons8-corgi-30.png"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -28,8 +28,8 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Twinstagram</a></h1>
-        <span>The #100Devs Social Network</span>
+        <h1 class=""><a href="/profile">Petfolio</a></h1>
+        <span>All of your pet's info in one place</span>
       </div>
     </header>
   </body>
