--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
         <a href="/login" class="col-3 btn btn-primary"> Login</a>
         <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
     </div>
+    <div class="masthead container d-flex align-items-center flex-column font-color sign-up-gap">
+        <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcm00ODNiYXRjaDItZWxlbWVudC1zLTA0MC14LmpwZw.jpg?s=zsK6i08ilLGGs08HScywkw9EM_o3oPcUKwT-Kdb3sFQ" alt="">
+        <!-- Masthead Heading-->
+    <div >
 </main>
     
 
