--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10362,3 +10362,6 @@ form .row:first-child .floating-label-form-group {
   border: 1px solid #333;
   box-shadow: 0 5px 5px rgba(0,0,0,0.2)
 }
+.finaltext-color{
+  color: #0063b2;
+}
