--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') -%>
 <body id="page-top">
+  
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="/profile">Petfolio</a>
@@ -19,8 +20,8 @@
   </nav>
   
   
-  <header class="masthead bg-primary text-white text-center shrink">
-    <div class="container d-flex align-items-center flex-column">
+  <header class="masthead bg-primary text-white text-center shrink ">
+    <div class="container d-flex align-items-center flex-column finaltext-color">
       <div class = "container compressed d-flex justify-content-center">
         <p><strong>Dog Fact</strong>: <%= dogFact.facts %></p>
     </div>
